--- a/data/style.css
+++ b/data/style.css
@@ -1,4 +1,11 @@
 /* ********** PAGE ********* */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     background: url("https://i.ytimg.com/vi/v1SabYdIlZI/maxresdefault.jpg") fixed;
     background-size: cover;
@@ -6,56 +13,64 @@ body {
     text-align: center;
     font-family: verdana, sans-serif;
     text-shadow: 1px 1px 3px black, -1px -1px 3px black, 1px -1px 3px black, -1px 1px 3px black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-#blocPage {
-    width: 80%;
-    margin: auto;
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+}
+
+footer {
+    width: 100%;
+    text-align: center;
+    background-color: #404040;
+    padding: 0.8rem;
+    margin-top: 5rem;
 }
 
 /* ********** TEXTES ********** */
 
 h1 {
-    font-size: 5em;
-    margin: 20px;
+    font-size: 1.8rem;
+    text-align: center;
+    margin-top: 2rem;
 }
 
 h2 {
-    font-size: 2em;
+    font-size: 1.5rem;
+    text-align: center;
 }
 
 h3 {
-    font-size: 1.5em;
-}
-
-p {
-    padding: 0;
-    margin: 10px;
-}
-
-main p {
-    font-size: 1.5em;
+    font-size: 1.1rem;
+    text-align: center;
 }
 
 .redTxt {
-    color: RGB(255,0,0);
+    color: RGB(255, 0, 0);
 }
 
 .greenTxt {
-    color: RGB(0,255,0);
+    color: RGB(0, 255, 0);
 }
 
 .blueTxt {
-    color: RGB(0,0,255);
+    color: RGB(0, 0, 255);
 }
 
 .gameOver {
     color: red;
     text-shadow: 2px 2px 15px black;
+    margin: auto;
 }
 
 .succeed {
-    color: RGB(0,255,0);
+    color: RGB(0, 255, 0);
 }
 
 .winner {
@@ -67,16 +82,18 @@ main p {
 button {
     text-shadow: 1px 1px 3px black, -1px -1px 3px black, 1px -1px 3px black, -1px 1px 3px black;
     color: white;
-    margin: 10px auto;
+    margin: 0.3rem auto;
     border-radius: 30px;
     font-weight: bold;
     border: 2px black solid;
+    padding: 0.7rem;
+    width: 90%;
+    font-size: 1.5rem;
+    max-width: 700px;
 }
 
 .lvlBtn {
-    width: 40%;
-    height: 100px;
-    font-size: 2.5em;
+    font-size: 1.8rem;
 }
 
 .coloredLvlBtn:hover {
@@ -93,54 +110,45 @@ button {
 }
 
 .uncoloredLvlBtn {
-    background: linear-gradient(180deg, rgba(150,150,150,1) 0%, rgba(100,100,100,1) 100%);
+    background: linear-gradient(180deg, rgba(150, 150, 150, 1) 0%, rgba(100, 100, 100, 1) 100%);
 }
 
 #lvl1ColoredBtn {
-    background: linear-gradient(180deg, rgba(0,255,0,1) 0%, rgba(0,85,85,1) 100%);
+    background: linear-gradient(180deg, rgba(0, 255, 0, 1) 0%, rgba(0, 85, 85, 1) 100%);
 }
 
 #lvl2ColoredBtn {
-    background: linear-gradient(180deg, rgba(0,85,85,1) 0%, rgba(0,0,255,1) 100%);
+    background: linear-gradient(180deg, rgba(0, 85, 85, 1) 0%, rgba(0, 0, 255, 1) 100%);
 }
 
 #lvl3ColoredBtn {
-    background: linear-gradient(180deg, rgba(0,0,255,1) 0%, rgba(85,0,85,1) 100%);
+    background: linear-gradient(180deg, rgba(0, 0, 255, 1) 0%, rgba(85, 0, 85, 1) 100%);
 }
 
 #lvl4ColoredBtn {
-    background: linear-gradient(180deg, rgba(85,0,85,1) 0%, rgba(255,0,0,1) 100%);
+    background: linear-gradient(180deg, rgba(85, 0, 85, 1) 0%, rgba(255, 0, 0, 1) 100%);
 }
 
 .redBtn {
-    background-color: RGB(255,0,0);
+    background-color: RGB(255, 0, 0);
 }
 
 .greenBtn {
-    background-color: RGB(0,255,0);
+    background-color: RGB(0, 255, 0);
 }
 
 .blueBtn {
-    background-color: RGB(0,0,255);
+    background-color: RGB(0, 0, 255);
 }
 
 .leaveBtn {
     background-color: gray;
 }
 
-.answerBtn {
-    display: block;
-    width: 40%;
-    height: 70px;
-    font-size: 2em;
-}
-
-.nextBtn, .succeedBtn, .gameOverBtn {
-    background: linear-gradient(-90deg, rgba(0,255,0,1) 0%, rgba(0,85,85,1) 100%);
-    width: 50%;
-    height: 90px;
-    margin-top: 50px;
-    margin-bottom: 20px;
+.nextBtn,
+.succeedBtn,
+.gameOverBtn {
+    background: linear-gradient(-90deg, rgba(0, 255, 0, 1) 0%, rgba(0, 85, 85, 1) 100%);
 }
 
 .answerBtn:hover {
@@ -153,54 +161,55 @@ button {
 /* ********** WINDOWS ********** */
 
 .lvlContainer {
-    width: 80%;
-    min-height: 100px;
+    width: 100%;
     border: black 2px solid;
-    margin: auto;
-    margin-bottom: 50px;
+    margin: 1rem auto;
+    padding: 1rem;
     border-radius: 20px;
 }
 
-.lvlWindow {
-    width: 95%;
-    min-height: 90px;
-    border: black 1px solid;
-    margin: 10px auto;
-    border-radius: 5px;
-}
-
 .coloredWindow {
-    width: 70%;
-    height: 200px;
-    /* background-color: black; */
-    margin: auto;
+    width: 90%;
+    max-width: 400px;
+    aspect-ratio: 1.6;
+    margin: 1rem auto;
     border-radius: 5px;
     border: 2px gray solid;
+}
+
+.lvlWindow {
+    display: flex;
+    flex-direction: column;
 }
 
 /* ********** AUTRE ********** */
 
 hr {
-    margin: 100px;
-}
-
-hr:last-child {
-    margin: 20px 100px 20px 100px;
-}
-
-.hidden {
-    display: none;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
+    width: 80%;
+    margin: 2rem;
 }
 
 .winnerImg {
     width: 10%;
 }
 
-footer {
-    font-size: 1em;
+@media screen and (min-width: 700px) {
+
+    h1 {
+        font-size: 3rem;
+    }
+
+    hr {
+        margin: 4rem auto;
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    main {
+        width: 50%;
+    }
+}
+
+.hidden {
+    display: none;
 }
